[package]
name = "websocket_physics"
version = "0.1.0"
edition = "2018"
authors = ["Adil Basar <descrout@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "*", features = [ "simd-stable" ] }
futures-util = { version = "0.3.17", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.11.0", default-features = false, features = ["io-util", "macros",  "time", "sync", "net", "rt-multi-thread"] }
tokio-tungstenite = {version = "0.15.0", default-features = false}
quick-protobuf = {git="https://github.com/Descrout/quick-protobuf"}